Fixed Image and Text Alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -11,7 +12,7 @@ img {
   font-size: 36px;
   font-weight: 900;
   margin-bottom: 32px;
-  text-align: center;
+
   
 }
 
@@ -28,7 +29,7 @@ img {
   background: #eee;
 }
 
-.contain-imgs {
+.container {
   display: flex;
   justify-content: center;
   gap: 52px;
